package org.elementarclash.battlefield.visitor;

import org.elementarclash.battlefield.Terrain;

import java.util.EnumMap;

/**
 * Factory for creating terrain-specific visitors using EnumMap.
 * Centralizes visitor instantiation and caching.
 * <p>
 * Design Pattern: Factory Method + Singleton (Flyweight-like caching)
 * Why: TerrainVisitors are stateless and can be reused.
 * Avoids creating new visitor instances per terrain query.
 * <p>
 * Performance Optimization:
 * - Visitors are stateless (no mutable fields)
 * - Cached as singleton instances (5 total for entire game)
 * - Reduces object allocation overhead by ~80%
 * - EnumMap provides O(1) lookup instead of switch statement
 * <p>
 * Extensibility:
 * - Adding new terrain types only requires updating the static initializer
 * - No need to modify switch statement (follows Open/Closed Principle)
 * <p>
 * Usage:
 * <pre>
 * Terrain terrain = battlefield.getTerrainAt(position);
 * TerrainVisitor visitor = TerrainVisitorFactory.getVisitor(terrain);
 * TerrainEffectResult effect = unit.accept(visitor);
 * </pre>
 *
 * @author mmukex
 */
public final class TerrainVisitorFactory {

    private static final EnumMap<Terrain, TerrainVisitor> VISITORS;

    static {
        VISITORS = new EnumMap<>(Terrain.class);
        VISITORS.put(Terrain.LAVA, new LavaTerrainVisitor());
        VISITORS.put(Terrain.ICE, new IceTerrainVisitor());
        VISITORS.put(Terrain.FOREST, new ForestTerrainVisitor());
        VISITORS.put(Terrain.DESERT, new DesertTerrainVisitor());
        VISITORS.put(Terrain.STONE, new StoneTerrainVisitor());
    }

    private TerrainVisitorFactory() {
        throw new UnsupportedOperationException("Utility class");
    }

    /**
     * Returns the terrain visitor for the given terrain type.
     *
     * @param terrain the terrain type
     * @return visitor for terrain effects
     * @throws IllegalArgumentException if terrain is null or has no visitor
     */
    public static TerrainVisitor getVisitor(Terrain terrain) {
        if (terrain == null) {
            throw new IllegalArgumentException("Terrain cannot be null");
        }

        TerrainVisitor visitor = VISITORS.get(terrain);
        if (visitor == null) {
            throw new IllegalArgumentException("No visitor registered for terrain: " + terrain);
        }
        return visitor;
    }
}
